frontend/depoyment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-cont
        image: shubhamthakur143/frontend-image
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits: 
            cpu: 300m
            memory: 256Mi
